[gd_scene load_steps=10 format=3 uid="uid://bvdon1vcn3r44"]

[ext_resource type="PackedScene" uid="uid://c4yawuxi2qfpp" path="res://Player/player.tscn" id="1_acu1j"]
[ext_resource type="Script" path="res://World/world.gd" id="1_mafur"]
[ext_resource type="Texture2D" uid="uid://crf24ekdn86i4" path="res://Materials/world.png" id="2_qva3l"]
[ext_resource type="Texture2D" uid="uid://c5yitx87hfp10" path="res://Materials/player_world.png" id="3_ra2ns"]
[ext_resource type="PackedScene" uid="uid://dd15yti7vnrt1" path="res://World/town_node.tscn" id="4_im5py"]
[ext_resource type="Script" path="res://Player/Player_Node.gd" id="5_5m3ew"]
[ext_resource type="PackedScene" uid="uid://b462jmyvwcqbu" path="res://Events/Game_Over.tscn" id="7_5lxvb"]
[ext_resource type="PackedScene" uid="uid://bgy5mqqfh3qfq" path="res://Events/Game_Finished.tscn" id="8_ajdf5"]
[ext_resource type="PackedScene" uid="uid://c71q0mp78o50d" path="res://Events/Event_Handler.tscn" id="8_fxyb1"]

[node name="World" type="Node2D"]
script = ExtResource("1_mafur")

[node name="World_Map" type="Sprite2D" parent="."]
position = Vector2(824, 304)
texture = ExtResource("2_qva3l")

[node name="Player" parent="." instance=ExtResource("1_acu1j")]

[node name="Towns" type="Node2D" parent="."]

[node name="Town_start" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 512.0
offset_top = 128.0
offset_right = 528.0
offset_bottom = 144.0
next_town_1_name = "Town2"
next_town_2_name = "Town4"
town = ""

[node name="Town2" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 712.0
offset_top = 152.0
offset_right = 728.0
offset_bottom = 168.0
next_town_1_name = "Town3"
next_town_2_name = "Town5"
town = "_town_2.tscn"

[node name="Town3" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 840.0
offset_top = 216.0
offset_right = 856.0
offset_bottom = 232.0
next_town_1_name = "Town6"
next_town_2_name = "Town8"
town = "_town_3.tscn"

[node name="Town4" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 584.0
offset_top = 296.0
offset_right = 600.0
offset_bottom = 312.0
next_town_1_name = "Town5"
next_town_2_name = "Town7"
town = "_town_4.tscn"

[node name="Town5" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 728.0
offset_top = 256.0
offset_right = 744.0
offset_bottom = 272.0
next_town_1_name = "Town8"
next_town_2_name = "Town3"
next_town_3_name = "Town7"
town = "_town_5.tscn"

[node name="Town6" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 976.0
offset_top = 264.0
offset_right = 992.0
offset_bottom = 280.0
next_town_1_name = "Town_end"
town = "_town_6.tscn"

[node name="Town7" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 712.0
offset_top = 360.0
offset_right = 728.0
offset_bottom = 376.0
next_town_1_name = "Town8"
next_town_2_name = "Town9"
town = "_town_7.tscn"

[node name="Town8" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 872.0
offset_top = 336.0
offset_right = 888.0
offset_bottom = 352.0
next_town_1_name = "Town_end"
town = "_town_8.tscn"

[node name="Town9" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 832.0
offset_top = 432.0
offset_right = 848.0
offset_bottom = 448.0
next_town_1_name = "Town_end"
town = "_town_9.tscn"

[node name="Town_end" parent="Towns" instance=ExtResource("4_im5py")]
offset_left = 1072.0
offset_top = 424.0
offset_right = 1088.0
offset_bottom = 440.0
town = "_town_end.tscn"

[node name="Town10" parent="Towns" instance=ExtResource("4_im5py")]
visible = false
offset_left = 1432.0
offset_top = 440.0
offset_right = 1448.0
offset_bottom = 456.0
next_town_1_name = "Town14"
town = "_town_10.tscn"

[node name="Town11" parent="Towns" instance=ExtResource("4_im5py")]
visible = false
offset_left = 1696.0
offset_top = 232.0
offset_right = 1712.0
offset_bottom = 248.0
next_town_1_name = "Town12"
next_town_2_name = "Town13"
town = "_town_11.tscn"

[node name="Town12" parent="Towns" instance=ExtResource("4_im5py")]
visible = false
offset_left = 1688.0
offset_top = 320.0
offset_right = 1704.0
offset_bottom = 336.0
next_town_1_name = "Town16"
town = "_town_12.tscn"

[node name="Town13" parent="Towns" instance=ExtResource("4_im5py")]
visible = false
offset_left = 1584.0
offset_top = 328.0
offset_right = 1600.0
offset_bottom = 344.0
next_town_1_name = "Town12"
next_town_2_name = "Town14"
town = "_town_13.tscn"

[node name="Town14" parent="Towns" instance=ExtResource("4_im5py")]
visible = false
offset_left = 1552.0
offset_top = 424.0
offset_right = 1568.0
offset_bottom = 440.0
next_town_1_name = "Town15"
town = "_town_14.tscn"

[node name="Town15" parent="Towns" instance=ExtResource("4_im5py")]
visible = false
offset_left = 1648.0
offset_top = 400.0
offset_right = 1664.0
offset_bottom = 416.0
next_town_1_name = "Town_end"
town = "_town_15.tscn"

[node name="Town16" parent="Towns" instance=ExtResource("4_im5py")]
visible = false
offset_left = 1760.0
offset_top = 360.0
offset_right = 1776.0
offset_bottom = 376.0
next_town_1_name = "Town_end"
town = "_town_16.tscn"

[node name="Town_Visit" type="Button" parent="."]
offset_left = 1080.0
offset_top = 632.0
offset_right = 1168.0
offset_bottom = 663.0
text = "Visit Town"

[node name="Town_goto" type="Button" parent="."]
offset_left = 696.0
offset_top = 632.0
offset_right = 792.0
offset_bottom = 663.0
text = "Go to Town"

[node name="Player_Node" type="CharacterBody2D" parent="."]
script = ExtResource("5_5m3ew")

[node name="Sprite2D" type="Sprite2D" parent="Player_Node"]
texture = ExtResource("3_ra2ns")

[node name="Game_Over" parent="." instance=ExtResource("7_5lxvb")]
visible = false

[node name="Game_Finished" parent="." instance=ExtResource("8_ajdf5")]
visible = false

[node name="Event_Handler" parent="." instance=ExtResource("8_fxyb1")]

[connection signal="button_down" from="Town_Visit" to="." method="_on_town_visit_button_down"]
[connection signal="button_down" from="Town_goto" to="." method="_on_town_goto_button_down"]
